# MaxAlea

./: LICENSE  README.md  package-info.json  readme.md  version.txt
docs/: alea.ana.maxref.xml  alea.ana2.maxref.xml  alea.arcsin.maxref.xml  alea.bendover.maxref.xml  alea.bernoulli.maxref.xml  alea.beta.maxref.xml  alea.bilatexp.maxref.xml  alea.border.maxref.xml  alea.brownie.maxref.xml  alea.cauchy.maxref.xml  alea.cauchypos.maxref.xml  alea.choice.maxref.xml  alea.circ.maxref.xml  alea.exp.maxref.xml  alea.gamma.maxref.xml  alea.gauss.maxref.xml  alea.hypercos.maxref.xml  alea.interval.maxref.xml  alea.laplace.maxref.xml  alea.lin.maxref.xml  alea.log.maxref.xml  alea.mapper.maxref.xml  alea.markov.maxref.xml  alea.markov2.maxref.xml  alea.mchoice.maxref.xml  alea.oneoverf.maxref.xml  alea.pareto.maxref.xml  alea.poisson.maxref.xml  alea.ran.maxref.xml  alea.rancd.maxref.xml  alea.tri.maxref.xml  alea.vonmises.maxref.xml  alea.walker.maxref.xml  alea.weibull.maxref.xml
extras/: MaxAlea_overview.maxpat
source/: CMakeLists.txt
source/cpp code/: alea.ana.cpp  alea.arcsin.cpp  alea.bendover.cpp  alea.bernoulli.cpp  alea.beta.cpp  alea.border.cpp  alea.brownie.cpp  alea.cauchy.cpp  alea.cauchypos.cpp  alea.choice.cpp  alea.circ.cpp  alea.exp.cpp  alea.gamma.cpp  alea.gauss.cpp  alea.hypercos.cpp  alea.interval.cpp  alea.laplace.cpp  alea.lin.cpp  alea.log.cpp  alea.mapper.cpp  alea.markov.cpp  alea.mchoice.cpp  alea.oneoverf.cpp  alea.pareto.cpp  alea.poisson.cpp  alea.ran.cpp  alea.rancd.cpp  alea.tri.cpp  alea.vonmises.cpp  alea.walker.cpp  alea.weibull.cpp
(+34 files in other folders)
